fix white-space and overflow for dates

--- a/styles/_comp.Btn.less
+++ b/styles/_comp.Btn.less
@@ -28,7 +28,6 @@
   padding: @g-boxpadd_mill;
   margin: 0; // override margin-top from xmeter
   font-weight: 700;
-  white-space: nowrap;
   border: 1px outset;
   cursor: pointer;
   a& {
