--- a/styles/_comp.Program.less
+++ b/styles/_comp.Program.less
@@ -40,7 +40,6 @@
 .c-Program__Schedule {
   height: 100%;
   overflow: hidden;
-  white-space: nowrap;
   .flex-order(1);
   .transition(width, height, font-size; 250ms);
 }
