--- a/styles/_comp.TimeBlock.less
+++ b/styles/_comp.TimeBlock.less
@@ -27,6 +27,7 @@
 .c-TimeBlock__Times {
   padding-right: 4rem;
   text-align: right;
+  white-space: nowrap;
 }
 
 .c-TimeBlock__Desc {
